[package]
name = "ssh"
description = "Bindings to libssh, a library to write clients and servers for both version 1 and 2 of the protocol. It can also parse SSH config files and handle ProxyCommand automatically. Only the client part is implemented for now."
version = "0.1.4"
authors = ["Pierre-Étienne Meunier <pierre-etienne.meunier@aalto.fi>"]
license = "MIT/Apache-2.0"
links = "ssh"
build = "build.rs"
repository = "https://pijul.org/ssh"
documentation = "https://pijul.org/ssh/doc/ssh/index.html"
edition = "2018"

[dependencies]
libc= "0.2.62"
log= "0.4.8"
bitflags= "1.2.1"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"
